cmake_minimum_required(VERSION 3.5)

add_executable(01 ${PROJECT_SOURCE_DIR}/src/01.cpp)

add_executable(02 ${PROJECT_SOURCE_DIR}/src/02.cpp)

add_executable(03 ${PROJECT_SOURCE_DIR}/src/03.cpp)

add_executable(04 ${PROJECT_SOURCE_DIR}/src/04.cpp)

add_executable(05 ${PROJECT_SOURCE_DIR}/src/05.cpp)

add_executable(06 ${PROJECT_SOURCE_DIR}/src/06.cpp)

add_executable(07 ${PROJECT_SOURCE_DIR}/src/07.cpp)

add_executable(08 ${PROJECT_SOURCE_DIR}/src/08.cpp)

add_executable(09 ${PROJECT_SOURCE_DIR}/src/09.cpp)

add_executable(10 ${PROJECT_SOURCE_DIR}/src/10.cpp)

add_executable(11 ${PROJECT_SOURCE_DIR}/src/11.cpp)

add_executable(12 ${PROJECT_SOURCE_DIR}/src/12.cpp)

add_executable(13 ${PROJECT_SOURCE_DIR}/src/13.cpp)

add_executable(14 ${PROJECT_SOURCE_DIR}/src/14.cpp)

add_executable(15 ${PROJECT_SOURCE_DIR}/src/15.cpp)




